<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.joooonho.SelectableRoundedImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="1dp"
        android:scaleType="centerCrop"
        app:sriv_left_bottom_corner_radius="50dp"
        app:sriv_left_top_corner_radius="50dp"
        app:sriv_right_bottom_corner_radius="50dp"
        app:sriv_right_top_corner_radius="50dp"
        app:srcCompat="@drawable/ic_person_black_24dp"
        tools:ignore="VectorDrawableCompat"
        app:sriv_oval="true"
        />

    <TextView
        android:id="@+id/uname_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/uid_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

    <TextView
        android:id="@+id/uroll_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
