<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="ABOUT US"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/csilogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:text="@string/What_is_csi"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Vision"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vision"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Mission "
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mission"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Objective"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Objective"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Flagship Events"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Game of Codes"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            />
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/goc"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GOC"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Mumbai Hackathon"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/mh"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MumbaiHackathon"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:layout_marginBottom="20dp"/>

<!--        <me.biubiubiu.justifytext.library.JustifyTextView-->
<!--            android:id="@+id/y"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/y"-->
<!--            android:textColor="@color/colorAccent"-->
<!--            android:textSize="16sp" />-->
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
</ScrollView>